--- a/TuneSpace.Core/TuneSpace.Core.csproj
+++ b/TuneSpace.Core/TuneSpace.Core.csproj
@@ -15,6 +15,7 @@
       </PackageReference>
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.3.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="System.Net.Http.Json" Version="9.0.3" />
     </ItemGroup>
 
 </Project>
