--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "1.8.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.2",
     "leaflet": "1.9.4",
     "leaflet.markercluster": "1.5.3",
