--- a/TuneSpaceBackend/TuneSpace.Api/TuneSpace.Api.csproj
+++ b/TuneSpaceBackend/TuneSpace.Api/TuneSpace.Api.csproj
@@ -21,5 +21,7 @@
       <ProjectReference Include="..\TuneSpace.Core\TuneSpace.Core.csproj" />
       <ProjectReference Include="..\TuneSpace.Infrastructure\TuneSpace.Infrastructure.csproj" />
     </ItemGroup>
-
+    <PropertyGroup>
+      <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    </PropertyGroup>
 </Project>
