--- a/TuneSpaceBackend/TuneSpace.Infrastructure/TuneSpace.Infrastructure.csproj
+++ b/TuneSpaceBackend/TuneSpace.Infrastructure/TuneSpace.Infrastructure.csproj
@@ -20,5 +20,7 @@
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
     </ItemGroup>
-
+    <PropertyGroup>
+      <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    </PropertyGroup>
 </Project>
