--- a/TuneSpaceFrontend/package.json
+++ b/TuneSpaceFrontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "5.0.1",
+    "@microsoft/signalr": "8.0.7",
     "@next/eslint-plugin-next": "15.3.0",
     "@radix-ui/react-avatar": "1.1.2",
     "@radix-ui/react-dialog": "1.1.6",
