--- a/TuneSpaceBackend/TuneSpace.Infrastructure/TuneSpace.Infrastructure.csproj
+++ b/TuneSpaceBackend/TuneSpace.Infrastructure/TuneSpace.Infrastructure.csproj
@@ -1,26 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
-
     <ItemGroup>
       <ProjectReference Include="..\TuneSpace.Core\TuneSpace.Core.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.1" />
-      <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.1" />
-      <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="9.0.1" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.UI" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" />
+      <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     </ItemGroup>
-    <PropertyGroup>
-      <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-    </PropertyGroup>
 </Project>
