--- a/TuneSpaceFrontend/package.json
+++ b/TuneSpaceFrontend/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "2.1.5",
     "@radix-ui/react-label": "2.1.2",
     "@radix-ui/react-navigation-menu": "1.2.5",
+    "@radix-ui/react-popover": "1.1.13",
     "@radix-ui/react-select": "2.1.6",
     "@radix-ui/react-separator": "1.1.2",
     "@radix-ui/react-slider": "1.2.2",
@@ -37,11 +38,13 @@
     "next": "15.3.0",
     "next-themes": "0.4.6",
     "react": "19.0.0",
+    "react-day-picker": "9.6.7",
     "react-dom": "19.0.0",
     "react-hook-form": "7.55.0",
     "react-icons": "5.4.0",
     "react-leaflet": "5.0.0",
     "sonner": "2.0.1",
+    "styled-components": "6.1.18",
     "tailwind-merge": "3.0.1",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.24.2"
