utilize options pattern

--- a/backend/TuneSpace.Application/TuneSpace.Application.csproj
+++ b/backend/TuneSpace.Application/TuneSpace.Application.csproj
@@ -13,5 +13,6 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\TuneSpace.Core\TuneSpace.Core.csproj" />
+    <ProjectReference Include="..\TuneSpace.Infrastructure\TuneSpace.Infrastructure.csproj" />
 	</ItemGroup>
 </Project>
