--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.2",
+    "jose": "6.0.11",
     "leaflet": "1.9.4",
     "leaflet.markercluster": "1.5.3",
     "lucide-react": "0.474.0",
@@ -48,7 +49,8 @@
     "styled-components": "6.1.18",
     "tailwind-merge": "3.0.1",
     "tailwindcss-animate": "1.0.7",
-    "zod": "3.24.2"
+    "zod": "3.24.2",
+    "zustand": "5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
