--- a/backend/TuneSpace.Infrastructure/TuneSpace.Infrastructure.csproj
+++ b/backend/TuneSpace.Infrastructure/TuneSpace.Infrastructure.csproj
@@ -15,5 +15,10 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+      <PackageReference Include="Pgvector.EntityFrameworkCore" />
+      <PackageReference Include="HtmlAgilityPack" />
+      <PackageReference Include="Microsoft.Extensions.VectorData.Abstractions" />
+      <PackageReference Include="Microsoft.ML.OnnxRuntime" />
+      <PackageReference Include="Microsoft.ML.Tokenizers" />
     </ItemGroup>
 </Project>
