--- a/backend/TuneSpace.Application/TuneSpace.Application.csproj
+++ b/backend/TuneSpace.Application/TuneSpace.Application.csproj
@@ -9,6 +9,8 @@
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" />
 		<PackageReference Include="System.Net.Http.Json" />
 		<PackageReference Include="Microsoft.AspNetCore.Http" />
+		<PackageReference Include="FluentEmail.Core" />
+		<PackageReference Include="FluentEmail.Smtp" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\TuneSpace.Core\TuneSpace.Core.csproj" />
