--- a/backend/TuneSpace.Infrastructure/TuneSpace.Infrastructure.csproj
+++ b/backend/TuneSpace.Infrastructure/TuneSpace.Infrastructure.csproj
@@ -20,5 +20,7 @@
       <PackageReference Include="Microsoft.ML.OnnxRuntime" />
       <PackageReference Include="Microsoft.ML.Tokenizers" />
       <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
+      <PackageReference Include="FluentEmail.Core" />
+		  <PackageReference Include="FluentEmail.Smtp" />
     </ItemGroup>
 </Project>
