update email templates

--- a/backend/TuneSpace.Infrastructure/TuneSpace.Infrastructure.csproj
+++ b/backend/TuneSpace.Infrastructure/TuneSpace.Infrastructure.csproj
@@ -24,8 +24,6 @@
       <PackageReference Include="FluentEmail.Smtp" />
     </ItemGroup>
     <ItemGroup>
-      <None Include="Email\Templates\*.html">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
+      <EmbeddedResource Include="Email\Templates\*.html" />
     </ItemGroup>
 </Project>
