add ml packages

--- a/backend/TuneSpace.Application/TuneSpace.Application.csproj
+++ b/backend/TuneSpace.Application/TuneSpace.Application.csproj
@@ -11,6 +11,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Http" />
 		<PackageReference Include="FluentEmail.Core" />
 		<PackageReference Include="FluentEmail.Smtp" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" />
+    <PackageReference Include="Microsoft.ML.Tokenizers" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\TuneSpace.Core\TuneSpace.Core.csproj" />
